# gaming

./: CMakeLists.txt  main.cpp
lib/manual-link/: SDL2main.lib
